feat/ desacoplando tokenStore, refatorando services e controller